# libdwarf-regressiontests

./: .gitignore  BASEFILES  BASEFILES.sh.in  BASEFUNCS  BASEFUNCS.sh  BLD  CHECKIFRUNNING.sh  CLEANUP  CLEANUP.sh  ChangeLog  ChangeLog2016  ChangeLog2017  ChangeLog2019  ChangeLog2022  ChangeLog2023  ChangeLog2025  DWARFTEST.sh  INITIALSETUP.sh  LOOKFOR.sh  Makefile.in  NEWS  PICKUPBIN  PICKUPBIN.sh  README.md  README.txt  RUN  RUNALL.sh  RUNTIMEFILES  RUNTIMEFILES.sh  RUNVAL  RegressionTestsResults.ods  SHALIAS.sh  TEST  alloctrack.py  bitoffset.base  config.h  config.h.in  config.status  configure  configure.ac  (+49 more)
Celik/: README  crash_elfio
CmakeTest/: CLEAN  README  test.c
CmakeTest/cmaketest/: CMakeLists.txt
DW201609-001/: DW201609-001-poc  PATCH  README  test1.c
DW201609-002/: DW201609-002-poc
DW201609-003/: README
DW201609-004/: poc
DW202412-009/: README  fuzz_init_path-5854698061496320
DW202412-011/: README  fuzz_die_cu_attrs-5424995441901568
abudev/: README  abudev_test.poc
allen1/: README
atefail/: README
augmentation/: README  main.c
bad-dwop/: BUILD  README  test.c
baddie1/: Makefile  README  incorrectatchild.base  incorrectatitself.base  incorrectbeforechild.base  incorrectbeforeitself.base  incorrectdies.base  incorrectnest.base  incorrectnest2.base  linetaberr.base  runtest.sh  runtests.sh  test_sibling.cpp
baselines/: CelikCrash.base  DW202412-009.base  abudev-a.base  choi010.base  choi011.base  choi012-10.base  choi012.base06  choi013.base  choi014.base  choi015a.base  choi015b.base  corexpdbg-crash  databitoffset.base  dwdebuglink-a.base  dwdebuglink-b.base  dwnames_all.base  examplev-ranges-a.base  examplev-ranges-b.base  examplev-ranges-c.base  frame1-2018.base  frame1-2018s.base  frame1-orig.base  frame1regs-2025-09-06.base  frame1riskv-2025-09-06.base  frame2regs-2025-12-07.base  frame2riskv-2025-12-07.base  fuzz201609.base  fuzz40624.base  fuzz40802.base  fuzz_die_cu-4889329913888768.base  fuzz_die_cu_e_print-4644164729110528.base  fuzz_init_b-4646656783220736.base  fuzz_init_b-6754026074210304.base  fuzz_init_path-5832857477251072.base  fuzz_set_frame_all-475563464.base  fuzz_set_frame_all-475582650.base  fuzz_showsectgrp-5634424300699648.base  fuzzguil.base  fuzzkal.base  fuzzmoy.base  (+127 more)
bigobj/: CLEANUP  README  bigobj.base  hello  hello.c  makebig.c  runtest.sh
bitoffset/: README  bitoffset.base  bitoffsetexample.c  test_bitoffset.c
c-sun/: README  id:000000,sig:06,src:000028,op:havoc,rep:2
c-sun2/: README  globaloverflow  nullpointer
camp/: README
checkforlibz/: runtest.sh  tzl.c
checkforlibzstd/: runtest.sh  tzlstd.c
choi010/: poc_file
choi011/: README
choi012/: README  poc_file_06  poc_file_07  poc_file_08
choi014/: command.sh
ckdev/: README  modulewithdwarf.ko
clifton/: README  blinky.tar.xz
compressed-be/: README  test.c  testprog-be-dw4
compressed-le/: README  buildtest  testprog-le-dw4
convey/: README  RUN
corexp/: README  elf.dbg
corruptdwarf-a/: README
cristi3/: README
data16/: README  data16-2.base  data16.base  runtest.sh  test.c
databitoffset/: README  dbotest.c
debugaddr/: BUILD  blaik.cc  t2.cc
debugfission/: README  runtest.sh
debugfissionb/: Makefile  README  RUN  chash1.base  chash3.base  ld-new.xz  moax64.base  moddg4.base  nodwarf.base  nodwarfexit1.base  pedll.base  peexe64.base  peexe64x.base  runtest.sh  thash1.base
debuglink/: README  basecrcoutb  baselink  baselinkc  build-id.c  crc32  crc32.c  crc32.debug  runtest.sh
debuglinkb/: README  RUNBOTH  bldid  bldnoid  hello.c  sectionspresent.txt  testany  testid  testid.debug  testnoid  testnoid.debug
debugnames/: README  dwarfdump  dwarfdumpone  jitreader
diederen4/: README  mips_dwarf_bad_interr_30368.elf
diederen5/: README  id-000004-sig-06-src-000503-001305-op-splice-rep-2  id-000004descr.txt  id-000010-sig-06-src-000503-001305-op-splice-rep-2  id-000010desc.txt  id-000017-sig-06-src-000034-op-havoc-rep-8  id-000017desc.txt  id-000075-sig-06-src-000517-op-havoc-rep-16  id-000075descr.txt  id-000256-sig-06-src-001757-001290-op-splice-rep-16  id-000256desc.txt  id-000347-sig-06-src-001923-op-havoc-rep-2  id-000347descr.txt  id-000468-sig-06-src-002858-op-havoc-rep-16  id-000468descr.txt
diederen6/: README
diederen7/: README  pc_dwarf_aircrack_ng.macho  pc_dwarf_aircrack_ng.macho.efddump
dwarf4/: README  ddg4.5dwarf-4-gdb-index
dwarfextract/: Makefile  basecstdout.base  dwarfextract.c  runtest.sh  runtests.sh  test1.base  testc.base
dwgena/: README  runtest.sh
dwgenc/: README  base.debugnames  base.stdout  runtest.sh  t.c
dwnames_checks/: README  build_dwnames.sh  build_dwnames_source.c  dwnames_all.c  dwnames_all.h
elfextend/: README
emre3/: BUILDTESTFILE
emre5/: README
emre6/: README  class_64_opt_fpo_split  class_64_opt_fpo_split.dwp
enciso3/: template.txt  test.cpp
enciso4/: RUNTEST.sh  runtest.sh
enciso5/: sample_S_option.cpp  sample_W_option.cpp
enciso6/: README  ranges.cpp
enciso8/: README  test.cpp
enciso9/: README
encisoa/: DW_AT_containing_type.cpp  README
err_allocate/: README  alloc_test.base  alloc_test.c  runtest.sh
examplechecks/: README  checkexamples.h  test_ranges.c
filelist/: README  baseresult  fileliste  findfilelist.sh  localfuzz_init_binary  localfuzz_init_binary.c  localfuzz_init_path  localfuzz_init_path.c  runtest.sh  with-cu-index-sec
findcu/: RUNTEST  cutest.c  runtest.sh
findfunc202501/: README  fuzz_findfuncbypc-5658339610001408
frame1/: frame1.base  frame1.exe.2018-05-11  frame2018.base  runtest.sh
frameriskv/: README  fft
gilmore/: README  a.out  ipa1.c  ipa1.s  ipa2.s
gobinary/: README  go-binary.xz
google1/: crash-c7e04f405a39f3e92edb56c28180531b9b8211bd  crash-d8d1ea593642a46c57d50e6923bc02c1bbbec54d
gordeyev/: DwarfTest  README
grumbach/: PATCH  README
gsplitdwarf/: README  frame1  frame1.dwo  getdebuglink  getdebuglink.dwo
guilfanov/: README  crash.base  runtest.sh
guilfanov2/: README  details.txt  double-free-poc  double-free-poc.base  poc.base  runtest.sh
hanzheng/: README  fuzzedobject
liu/: README
(+593 files in other folders)
